2017-02-17 Robert Wolff <robert.wolff@cern.ch>
	* remove AntiKt4PV0TrackJets
	* add new ilumicalc and GRL for 2016 data
	* add DLT matching for lepton pairs with pt threshold for mumu trigger
	* add transverse mass Met+remainging lep for 3l with Z candidates
	* fix protection for sherpa21 shower samples for running on grid

2017-02-15 Robert Wolff <robert.wolff@cern.ch>
	* update to AnalysisTop 2.4.27
	* add 60% and 85% b-tagging WP to 2015 data config
	* update submission script for Sys splitting

2017-02-13 Harish Potti <harish.potti@utexas.edu>
	* add addXsec.py
	* add README in util/
	* update Xsections

2017-02-02 Robert Wolff <robert.wolff@cern.ch>
	* add nleptonplustau selection for 1l+1tau channel in systematic trees

2017-01-31 Rohin Narayan <narayan@cern.ch>
	* adding lead_jetE  and sublead_jetE flat branches
	* Adding truth jets
	* Adding updated Texas MVA

2017-01-27 Robert Wolff <robert.wolff@cern.ch>
	* add ChargeIDSelectorTool output to flat lepton branches
	* Add PromptLepton* variables to flat lepton branches
	* uncomment obsolete Madgraph and Pythia V+jets samples

2017-01-26 Robert Wolff <robert.wolff@cern.ch>
	* use AnalysisTop 2.4.25

2017-01-19 Marco Milesi <marco.milesi@cern.ch>
	* Add protection for truth particles w/o prodVertex

2017-01-17 Robert Wolff <robert.wolff@cern.ch>
	* fixed ME photon for running on data

2017-01-16 Kevin de Vasconcelos <kevin.devasconcelos@cern.ch>
	* added QmisId flag in vector branches

2017-01-16 Robert Wolff <robert.wolff@cern.ch>
	* added LHE3 weights
	* added truth matrix element photon information

2017-01-12 Robert Wolff <robert.wolff@cern.ch>
	* additional ttbar and HppHmm MC samples

2017-01-10 David Hohn
	* use AnalysisTop 2.4.24
	* enable ttbar HF classification
	* Removing PanTau p4 which is now part of MVA TES
	* re-include Taus, enable Tau MVA TES by default

2016-12-14 Robert Wolff <robert.wolff@cern.ch>
	* Fixed and updated names of pdfinfo variables for truth mc events
