@@ -4,6 +4,7 @@
 	* add DLT matching for lepton pairs with pt threshold for mumu trigger
 	* add transverse mass Met+remainging lep for 3l with Z candidates
 	* fix protection for sherpa21 shower samples for running on grid
+	* add new diboson cross-sections and k-factors in TopDataPreparation
 
 2017-02-15 Robert Wolff <robert.wolff@cern.ch>
 	* update to AnalysisTop 2.4.27
